[gd_scene load_steps=10 format=3 uid="uid://8ldcu07yi5a5"]

[ext_resource type="Script" path="res://Assets/Script/Class/Wolf/Wolf Alamanac/Index/Wolf_Almanac_Index_Page_8.gd" id="1_kxwky"]
[ext_resource type="Texture2D" uid="uid://c8vpwhgqrvpou" path="res://Assets/Image/Background/Wolf Almanac Index/Wood Texture.png" id="2_cntm3"]
[ext_resource type="FontFile" uid="uid://cnhshuaxal67w" path="res://Assets/Fonts/DisposableDroidBB_bldital.ttf" id="3_ehq0v"]
[ext_resource type="Theme" uid="uid://dk2f873t2ffc2" path="res://Assets/Theme/Wolf_Almanac_Idex/Button.tres" id="4_hc01o"]
[ext_resource type="Texture2D" uid="uid://rydxjf2k4x0c" path="res://Assets/Image/Buttons/Button.png" id="4_simxg"]
[ext_resource type="AudioStream" uid="uid://c0lhrui6o2e72" path="res://Assets/Music/All Button/Button.mp3" id="5_j11wy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i1yfe"]
atlas = ExtResource("4_simxg")
region = Rect2(1389, 668, 182, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_3umdr"]
atlas = ExtResource("4_simxg")
region = Rect2(1389, 668, 182, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_8is5s"]
atlas = ExtResource("4_simxg")
region = Rect2(1389, 668, 182, 189)

[node name="WolfAlamacIndexPage8" type="Node2D"]
script = ExtResource("1_kxwky")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_cntm3")
expand_mode = 1

[node name="Tittle_Label" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -158.0
offset_right = 158.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_shadow_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_outline_color = Color(0.976471, 0.592157, 0.415686, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("3_ehq0v")
theme_override_font_sizes/font_size = 44
text = "Wolf Species List
"

[node name="Almanac Index" type="GridContainer" parent="Background"]
clip_contents = true
layout_direction = 1
layout_mode = 0
offset_left = 50.0
offset_top = 44.0
offset_right = 1236.0
offset_bottom = 661.0
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 10
columns = 3

[node name="WolfVBoxContainer22" type="VBoxContainer" parent="Background/Almanac Index"]
custom_minimum_size = Vector2(245, 245)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3

[node name="Wolf 22" type="TextureButton" parent="Background/Almanac Index/WolfVBoxContainer22"]
custom_minimum_size = Vector2(385, 555)
layout_mode = 2
texture_disabled = SubResource("AtlasTexture_i1yfe")
ignore_texture_size = true
stretch_mode = 0

[node name="Label_Wolf_22" type="Button" parent="Background/Almanac Index/WolfVBoxContainer22"]
layout_mode = 2
theme = ExtResource("4_hc01o")
theme_override_fonts/font = ExtResource("3_ehq0v")
theme_override_font_sizes/font_size = 24
text = "Wolf Label"
flat = true

[node name="WolfVBoxContainer23" type="VBoxContainer" parent="Background/Almanac Index"]
layout_mode = 2

[node name="Wolf 23" type="TextureButton" parent="Background/Almanac Index/WolfVBoxContainer23"]
custom_minimum_size = Vector2(385, 555)
layout_mode = 2
texture_disabled = SubResource("AtlasTexture_3umdr")
ignore_texture_size = true
stretch_mode = 0

[node name="Label_Wolf_23" type="Button" parent="Background/Almanac Index/WolfVBoxContainer23"]
layout_mode = 2
theme = ExtResource("4_hc01o")
text = "Wolf Label"
flat = true

[node name="WolfVBoxContainer24" type="VBoxContainer" parent="Background/Almanac Index"]
layout_mode = 2

[node name="Wolf 24" type="TextureButton" parent="Background/Almanac Index/WolfVBoxContainer24"]
clip_contents = true
custom_minimum_size = Vector2(385, 555)
layout_mode = 2
texture_disabled = SubResource("AtlasTexture_8is5s")
ignore_texture_size = true
stretch_mode = 0

[node name="Label_Wolf_24" type="Button" parent="Background/Almanac Index/WolfVBoxContainer24"]
custom_minimum_size = Vector2(355, 24)
layout_mode = 2
theme = ExtResource("4_hc01o")
text = "Wolf Label"
flat = true

[node name="Back Button" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.051
anchor_top = 0.886
anchor_right = 0.094
anchor_bottom = 0.931
offset_left = -0.280006
offset_top = 0.0799561
offset_right = -0.320007
offset_bottom = -0.320068
theme_override_fonts/font = ExtResource("3_ehq0v")
theme_override_font_sizes/font_size = 24
text = "Back
"
flat = true

[node name="Page Label" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.466
anchor_top = 0.901
anchor_right = 0.55
anchor_bottom = 0.935
offset_left = 11.52
offset_top = 1.27997
offset_right = -12.0
offset_bottom = -0.200073
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ehq0v")
theme_override_font_sizes/font_size = 24
text = "Page 8 of 9"

[node name="Button_Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_j11wy")

[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer22/Wolf 22" to="." method="_on_northern_rocky_mountain_wolf_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer22/Label_Wolf_22" to="." method="_on_northern_rocky_mountain_wolf_label_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer23/Wolf 23" to="." method="_on_northwestern_wolf_image_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer23/Label_Wolf_23" to="." method="_on_northwestern_wolf_label_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer24/Wolf 24" to="." method="_on_red_wolf_image_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer24/Label_Wolf_24" to="." method="_on_red_wolf__label_pressed"]
[connection signal="pressed" from="Background/Back Button" to="." method="_on_back_button_pressed"]
